# stm32-embedded-demo

./: .gitignore  CMakeLists.txt  README.md
src/: base_flows.hpp  interrupt_config.hpp  main.cpp  project.hpp
src/interrupt/: flows.hpp  module.hpp  registers.hpp
src/stm32l432/hal/: concurrency_hal.hpp  interrupt_flows.hpp  interrupt_hal.hpp
toolchains/: gcc-arm.cmake
